# Projeto-API-Flask

./: pyproject.toml
instance/: database.db
migrations/versions/: b710bcbe2753_iniciando_migração.py
src/: README.md  app.py  render.sh  utils.py
src/controllers/: auth.py  role.py  usuario.py
src/models/: models.py
