[project]
name = "api-flask"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Victor-Ribeiro-Acosta",email = "victoracosta275@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask >= 3.1",
    "flask-sqlalchemy",
    "flask-migrate",
    "alembic",
    "flask-jwt-extended"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
