[project]
name = "api-flask"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Victor-Ribeiro-Acosta",email = "victoracosta275@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask >= 3.1",
    "flask-sqlalchemy",
    "flask-migrate",
    "alembic",
    "flask-jwt-extended",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
